# Projects

./: .gitignore  README.md
Choco/: install_choco.ps1
CrashReporter/: CMakeLists.txt  CMakePresets.json  README.md  version.rc.in
CrashReporter/src/: CrashReporter.cpp  CrashReporter.h  defines.h
GraphicsViewDemo/: CMakeLists.txt  CMakePresets.json  README.md
GraphicsViewDemo/src/: BezierCurveItem.cpp  BezierCurveItem.h  ScatterItem.cpp  ScatterItem.h  main.cpp  widget.cpp  widget.h
QtSystemEvent/: CMakeLists.txt  CMakePresets.json  SystemEventHandler.h  SystemEventManager.cpp  SystemEventManager.h  SystemEventType.h  main.cpp
RenderWidget/: .gitignore  RenderWidget.sln
RenderWidget/CommonUtils/: CommonUtils.vcxproj  CommonUtils.vcxproj.filters  Global.h  ReadPointCloud.cpp  ReadPointCloud.h
RenderWidget/RenderWidget/: CustomInteractorStyle.cpp  CustomInteractorStyle.h  EigenPropertySheet.props  MainWidget.cpp  MainWidget.h  ReleasePropertySheet.props  RenderNativeWidget.cpp  RenderNativeWidget.h  RenderWidget.vcxproj  RenderWidget.vcxproj.filters  VTKPropertySheet.props  main.cpp
